<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">二手交易平台</string>
    <string name="home">主页</string>
    <string name="my_goods">我的商品</string>
    <string name="record">记录</string>
    <string name="wish_list">心愿单</string>
    <string name="personal_info">个人信息</string>
    <string name="message_center">消息中心</string>
    <string name="logout">注销</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">主页</string>
    <string name="action_settings">设置</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">价格：￥</string>
    <string name="goods_detail">商品详情</string>
    <string name="add_to_wishlist">+心愿单</string>
    <string name="banner_text">Sell goods, help yourself</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="goods_img_dscrp">商品图片</string>
    <string name="banner_img_dscrp">二手跳蚤平台</string>
    <string name="regist_success_dscrp">注册成功</string>
    <string name="seller_name">卖家：</string>
    <string name="goods_detail_content">这里是商品详情这里是商品详情这里是商品详情这里是商品详情这里是商品详情这里是商品详情这里是商品详情</string>
    <string name="goods_detail_comment">商品评论</string>
    <string name="goods_comment_content">这里是商品评论这里是商品评论这里是商品评论这里是商品评论这里是商品评论这里是商品评论这里是商品评论这里是商品评论</string>
    <string name="user_email">用户注册邮箱</string>
    <string name="edit">编辑</string>
    <string name="password_change">修改密码</string>
    <string name="buylist">买入清单</string>
    <string name="selllist">卖出清单</string>
    <string name="buy_date">2014-7-11</string>
    <string name="buy_or_bought">买入</string>
    <string name="add_new_good">添加商品</string>
    <string name="buynow">现在购买</string>
    <string name="comment">评价</string>
    <string name="commentContent">输入商品评价...</string>
    <string name="submit">提交</string>
    <string name="goods_price_info">商品价格</string>
    <string name="goods_img">商品图片</string>
    <string name="goods_description">商品描述</string>
    <string name="choose_img">选择...</string>
    <string name="status1">状态：</string>
    <string name="status2">在架上</string>
    <string name="seller_name2">困困</string>
    <string name="onshelf">上架</string>
    <string name="offshelf">下架</string>
    <string name="username_eg">困困</string>
    <string name="email_eg">kun@gmail.com</string>
    <string name="cellphone">手机</string>
    <string name="cellphone_ex">13612312345</string>
    <string name="zfb">支付宝账号</string>
    <string name="zfb_ex">kun@gmail.com</string>
    <string name="user_info">用户信息</string>
    <string name="goods_price_ex">20.00</string>
    <string name="comment_name">评论者：</string>
    <string name="comment_name_eg">柔柔</string>
    <string name="comment_time">评论时间：</string>
    <string name="comment_time_eg">2014-7-14 15:17</string>
    <string name="change">修改</string>
    <string name="edit_user_info">修改用户信息</string>
    <string name="add_wishlist_time">收藏时间：</string>
    <string name="add_wish_list_eg">2014-07-14 11:23</string>
    <string name="trade_operate">操作：</string>
    <string name="trade_time">时间：</string>
    <string name="trade_time_eg">2014-07-15 14:21</string>
    <string name="message_theme1">主题：</string>
    <string name="message_theme2">买错了！</string>
    <string name="message_sender1">发信人：</string>
    <string name="message_sender2">彬彬</string>
    <string name="message_content">买错东西了买错东西了买错东西了买错东西了买错东西了买错东西了买错东西了买错东西了买错东西了买错东西了买错东西了</string>
    <string name="message_time1">发信时间：</string>
    <string name="message_time2">2014-7-15 15:15</string>
</resources>
