<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingLeft="0dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/personalUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/user_info"
        android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp" >

                <TextView
                    android:id="@+id/personalUsername"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/personalUsernameContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_eg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp" >

                <TextView
                    android:id="@+id/personalEmail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/personalEmailContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_eg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp" >

                <TextView
                    android:id="@+id/personalCellphone"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cellphone" />

                <TextView
                    android:id="@+id/personalCellphoneContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cellphone_ex" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp" >

                <TextView
                    android:id="@+id/personalZfb"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zfb" />

                <TextView
                    android:id="@+id/personalZfbContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zfb_ex" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" >

                <TextView
                    android:id="@+id/personalPw"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <Button
                    android:id="@+id/personalPwContent"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/password_change"
                    android:textSize="13sp" />

            </LinearLayout>

            <Button
                android:id="@+id/personalEdit"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="#accb12"
                android:text="@string/edit" />

</LinearLayout>
