<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/msgTheme1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_theme1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/msgTheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_theme2"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/msgSender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_sender1" />

            <TextView
                android:id="@+id/msgSender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_sender2" />

            <TextView
                android:id="@+id/msgTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/message_time1" />

            <TextView
                android:id="@+id/msgTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_time2" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message_content" />

    </LinearLayout>

</LinearLayout>