<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingLeft="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="0dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/goods_img_dscrp"
                android:src="@drawable/goods_img" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/sellerGoodsName"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/goods_name"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/sellerEdit"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/sellerGoodsName"
                    android:text="@string/edit"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/sellerGoodsPrice1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sellerGoodsName"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/goods_price" />

                <TextView
                    android:id="@+id/sellerGoodsPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/sellerGoodsPrice1"
                    android:layout_below="@id/sellerGoodsName"
                    android:layout_toRightOf="@id/sellerGoodsPrice1"
                    android:gravity="left"
                    android:text="@string/goods_price_ex" />

                <TextView
                    android:id="@+id/sellerStatus1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sellerGoodsPrice1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/status1" />

                <TextView
                    android:id="@+id/sellerStatus2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/sellerStatus1"
                    android:layout_toRightOf="@id/sellerStatus1"
                    android:text="@string/status2" />

                <Button
                    android:id="@+id/sellerOnshelf"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/sellerStatus1"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#accb12"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/onshelf"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/sellerOffshelf"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/sellerStatus1"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/sellerOnshelf"
                    android:background="#accb12"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/offshelf"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#f6f6f6"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/detailGoods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_detail" />

            <TextView
                android:id="@+id/detailGoodsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/goods_detail_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#f6f6f6"
            android:measureWithLargestChild="true"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/detailComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_detail_comment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/submitComment"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:text="@string/submit"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- ListView控件 -->

            <ListView
                android:id="@+id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>