<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="0dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/goods_img_dscrp"
        android:src="@drawable/goods_img" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/detailGoodsName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/goods_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailGoodsPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_alignParentLeft="true"
            android:layout_below="@id/detailGoodsName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/goods_price" />

        <TextView
            android:id="@+id/detailGoodsPrice2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/detailGoodsPrice1"
            android:layout_below="@id/detailGoodsName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/detailGoodsPrice1"
            android:text="@string/goods_price_ex" />
    </RelativeLayout>

</LinearLayout>