<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp" >

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="320dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/banner_img_dscrp"
                android:src="@drawable/banner_text" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/loginPw"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/login"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:background="#636265"
                    android:text="@string/login"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/loginRegist"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="#e3e3e3"
                    android:text="@string/regist" />

            </LinearLayout>

        </LinearLayout>

</LinearLayout>
