<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="0dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/goods_img_dscrp"
                android:src="@drawable/goods_img" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/recordGoodsName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/goods_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/recordGoodsPrice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recordGoodsName"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/goods_price" />

                <TextView
                    android:id="@+id/recordTradeTime"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/recordGoodsPrice"
                    android:layout_marginLeft="10dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/buy_date"
                    android:textSize="12sp"
                    android:width="50dp" />

                <TextView
                    android:id="@+id/recordBuySell"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@+id/goodsComment"
                    android:layout_below="@id/recordGoodsPrice"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/recordTradeTime"
                    android:gravity="left|center_vertical"
                    android:text="@string/buy_or_bought"
                    android:textSize="12sp"
                    android:width="50dp" />

            </RelativeLayout>

        </LinearLayout>
</LinearLayout>
