<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingLeft="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="0dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/goods_img_dscrp"
                android:src="@drawable/goods_img" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/commentGoodsName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/goods_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/commentGoodsPrice"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/commentGoodsName"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/goods_price" />

                <TextView
                    android:id="@+id/commentSellerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/commentGoodsPrice"
                    android:layout_alignBottom="@+id/commentGoodsPrice"
                    android:layout_toRightOf="@+id/commentGoodsPrice"
                    android:text="@string/seller_name" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#f6f6f6"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >

            <EditText
                android:id="@+id/commentContent"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.45"
                android:ems="10"
                android:hint="@string/commentContent"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="#accb12"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
